# rust_package_installer_cli

./: .gitignore  Cargo.toml  LICENSE  README.md  pnpm-lock.yaml
bundle/: bundle-info.json
bundle/assets/: package.json
bundle/assets/templates/angularjs/typescript/material-ui-no-tailwind-template/: package-lock.json
bundle/assets/templates/angularjs/typescript/material-ui-tailwind-template/: package-lock.json
bundle/pkg-ready/: index.js  package.json
bundle/standalone/: index.js
docs/: commands.md
src/: main.rs
templates/nuxtjs/typescript/no-shadcn-tailwind-template/: pnpm-lock.yaml
